# lox-rs

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile  mise.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
src/: lib.rs  main.rs
tests/: integration.rs
tests/cases/: hello.lox
