[package]
name = "lox"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rustyline = "14"
thiserror = "2"

[dev-dependencies]
insta = { version = "1", features = ["glob"] }

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
